# cube1

./: .clang-format  CMakeLists.txt  README.md
assets/: how-to-read.txt
src/: basic_shader.cpp  basic_shader.hpp  imgui_demo_window.cpp  imgui_demo_window.hpp  main.cpp
src/shaders/: fragment.glsl  fragment_blinn_phong.glsl  fragment_blinn_phong_directional_light.glsl  fragment_depth_shader.glsl  fragment_empty.glsl  fragment_lightcube.glsl  fragment_phong.glsl  fragment_quad.glsl  vertex.glsl  vertex_quad.glsl  vertex_simple_depth.glsl
